--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -1,23 +1,42 @@
 name: Visual testing
 
 on:
-  workflow_run:
-    workflows: ['AWS Amplify Console Web Preview']
-    types:
-      - completed
-  workflow_dispatch:
-  repository_dispatch:
-    types: [run_visual_testing]
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+
+# on:
+#   workflow_run:
+#     workflows: ['AWS Amplify Console Web Preview']
+#     types:
+#       - completed
+#   workflow_dispatch:
+#   repository_dispatch:
+#     types: [run_visual_testing]
+#   pull_request:
+#     branches: [main]
 
 jobs:
   visual-testing:
     runs-on: ubuntu-latest
 
-    container: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
+    env:
+      PR_NAME: ${{ github.event.number }}
+      AMPLIFY_LINK: https://pr-686.d3acoh2jwy8aw9.amplifyapp.com
+      BASE_URL: http://host.docker.internal:6006 # this should be coming from reading the amplify link
+      CYPRESS_IMAGE: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
+
+    # container: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
     steps:
       - uses: actions/checkout@v3
 
-      - name: Run visual testing
-        run: cypress run --browser chrome --config viewportWidth=1024,viewportHeight=768
+      #- name: Run visual testing
+      #  run: cypress run --browser chrome --config viewportWidth=1024,viewportHeight=768
+
+      - name: Check PR number
+        run: echo "PR_NUMBER=${{ env.PR_NAME }}"
+      # Instead of running PRcontainer, let's run the whole command here
+      #- name: Run Visual Testing
+      #  run: docker run -it -v $PWD:/e2e -w /e2e -e BASE_URL=${{ env.BASE_URL }} ${{ env.CYPRESS_IMAGE }} --config viewportWidth=1024,viewportHeight=768
