--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PR_NAME: ${{ github.event.number }}
+      PR_NAME: ${{ github.event.pull_request }}
       AMPLIFY_LINK: https://pr-686.d3acoh2jwy8aw9.amplifyapp.com
       BASE_URL: http://host.docker.internal:6006 # this should be coming from reading the amplify link
       CYPRESS_IMAGE: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
