--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -23,9 +23,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PR_NAME: ${{ github.event.pull_request.title }}
-      AMPLIFY_LINK: https://pr-686.d3acoh2jwy8aw9.amplifyapp.com
-      BASE_URL: http://host.docker.internal:6006 # this should be coming from reading the amplify link
+      AMPLIFY_LINK: https://pr-${{ github.event.number }}.d3acoh2jwy8aw9.amplifyapp.com
       CYPRESS_IMAGE: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
 
     # container: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
@@ -36,7 +34,7 @@ jobs:
       #  run: cypress run --browser chrome --config viewportWidth=1024,viewportHeight=768
 
       - name: Check PR number
-        run: echo "PR_NUMBER_2=${{ env.PR_NAME }}"
+        run: echo "AMPLIFY_LINK=${{ env.AMPLIFY_LINK }}"
       # Instead of running PRcontainer, let's run the whole command here
       #- name: Run Visual Testing
-      #  run: docker run -it -v $PWD:/e2e -w /e2e -e BASE_URL=${{ env.BASE_URL }} ${{ env.CYPRESS_IMAGE }} --config viewportWidth=1024,viewportHeight=768
+      #  run: docker run -it -v $PWD:/e2e -w /e2e -e BASE_URL=${{ env.AMPLIFY_LINK }} ${{ env.CYPRESS_IMAGE }} --config viewportWidth=1024,viewportHeight=768
