Remove -it from docker command

--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -1,15 +1,22 @@
 name: Visual testing
 
 on:
-  workflow_run:
-    workflows: ['AWS Amplify Console Web Preview']
-    types:
-      - completed
-  workflow_dispatch:
-  repository_dispatch:
-    types: [run_visual_testing]
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+
+# on:
+#   workflow_run:
+#     workflows: ['AWS Amplify Console Web Preview']
+#     types:
+#       - completed
+#   workflow_dispatch:
+#   repository_dispatch:
+#     types: [run_visual_testing]
+#   pull_request:
+#     branches: [main]
 
 jobs:
   visual-testing:
@@ -27,4 +34,4 @@ jobs:
       #  run: cypress run --browser chrome --config viewportWidth=1024,viewportHeight=768
 
       - name: Run Visual Testing
-        run: docker run -it -v $PWD:/e2e -w /e2e -e BASE_URL=${{ env.AMPLIFY_LINK }} ${{ env.CYPRESS_IMAGE }} --browser chrome --config viewportWidth=1024,viewportHeight=768
+        run: docker run -v $PWD:/e2e -w /e2e -e BASE_URL=${{ env.AMPLIFY_LINK }} ${{ env.CYPRESS_IMAGE }} --browser chrome --config viewportWidth=1024,viewportHeight=768
