chore: add type module on package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "url": "https://malty.carlsberggroup.com",
   "version": "1.0.33",
   "private": true,
+  "type": "module",
   "keywords": [
     "carlsberg",
     "malty",
