--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -6,35 +6,28 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:
-
-# on:
-#   workflow_run:
-#     workflows: ['AWS Amplify Console Web Preview']
-#     types:
-#       - completed
-#   workflow_dispatch:
-#   repository_dispatch:
-#     types: [run_visual_testing]
-#   pull_request:
-#     branches: [main]
+  repository_dispatch:
+    types: [run_visual_testing]
 
 jobs:
   visual-testing:
     runs-on: ubuntu-latest
 
-    env:
-      AMPLIFY_LINK: https://pr-${{ github.event.number }}.d3acoh2jwy8aw9.amplifyapp.com
-      CYPRESS_IMAGE: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
+    # env:
+    #   CYPRESS_IMAGE: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
 
-    container: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
+    container:
+      image: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
+      env:
+        AMPLIFY_LINK: https://pr-${{ github.event.number }}.d3acoh2jwy8aw9.amplifyapp.com
     steps:
       - uses: actions/checkout@v3
 
       - name: Install cypress and its dependencies
         run: npm i -g cypress cypress-visual-regression dotenv
 
-      - name: Create .env
-        run: echo "BASE_URL=${{ env.AMPLIFY_LINK }}" >> .env
+      # - name: Create .env
+      #   run: echo "BASE_URL=${{ env.AMPLIFY_LINK }}" >> .env
 
       - name: Run visual testing
         run: cypress run --browser chrome --config viewportWidth=1024,viewportHeight=768
