--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -19,7 +19,7 @@ jobs:
     container:
       image: cypress/included:cypress-13.6.4-node-20.11.0-chrome-121.0.6167.85-1-ff-120.0-edge-121.0.2277.83-1
       env:
-        AMPLIFY_LINK: https://pr-${{ github.event.number }}.d3acoh2jwy8aw9.amplifyapp.com
+        BASE_URL: https://pr-${{ github.event.number }}.d3acoh2jwy8aw9.amplifyapp.com
     steps:
       - uses: actions/checkout@v3
 
