feat: create script to move images from actual to base folder

--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -82,4 +82,4 @@ jobs:
         run: tar -xvf malty.tar
 
       - name: Run visual testing
-        run: yarn cypress:run
+        run: yarn cypress:ci:desktop
