ci: define retention days

--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -58,6 +58,7 @@ jobs:
           name: malty-artifact
           if-no-files-found: error
           path: malty.tar
+          retention-days: 1
 
   visual-testing:
     runs-on: ubuntu-latest
@@ -96,6 +97,7 @@ jobs:
         with:
           name: cypress-snapshots-${{ matrix.containers }}
           path: cypress/snapshots
+          retention-days: 1
 
       - name: Upload Cypress Logs
         uses: actions/upload-artifact@v3
@@ -103,3 +105,4 @@ jobs:
         with:
           name: cypress-logs-${{ matrix.containers }}
           path: cypress/logs
+          retention-days: 1
