--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "build-storybook": "storybook build -o docs",
     "build": "bit build",
     "test": "jest",
-    "test:ci": "jest --silent --ci --coverage",
+    "test:ci": "jest --silent --ci --coverage --coverageDirectory=jest-coverage",
     "test:watch": "jest --watch",
     "format": "prettier --write . --loglevel error",
     "check-lint": "eslint \"{malty,cypress}/**/*.{js,ts,tsx}\" --max-warnings=9",
     "lint": "yarn check-lint --fix",
-    "check-types": "tsc --noemit",
+    "check-types": "tsc --noemit && tsc --project ./cypress --noemit",
     "check-format": "prettier --check .",
     "set-peer-dep": "node ./scripts/set-peer-dependency.mjs",
     "cypress:open": "cypress open",
@@ -74,6 +74,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/babel__core": "^7.1.20",
     "@types/jest": "^29.4.0",
+    "@types/pngjs": "^6.0.4",
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-datepicker": "^4.8.0",
@@ -153,5 +154,8 @@
       }
     }
   },
-  "prettier": "@carlsberg/prettier-config"
+  "prettier": "@carlsberg/prettier-config",
+  "nyc": {
+    "report-dir": "cypress-coverage"
+  }
 }
