--- a/lerna.json
+++ b/lerna.json
@@ -13,6 +13,10 @@
   "command": {
     "publish": {
       "registry": "https://npm.pkg.github.com/"
+    },
+    "version": {
+      "tagVersionPrefix": "",
+      "createRelease": "github"
     }
   }
 }
