feat: add new theme provider to lerna

--- a/malty/theme/NewMaltyThemeProvider/package.json
+++ b/malty/theme/NewMaltyThemeProvider/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@carlsberggbs/malty.theme.malty-theme-provider",
-  "version": "0.2.0",
+  "name": "@carlsberggbs/malty.theme.new-malty-theme-provider",
+  "version": "0.0.1",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "types": "./lib/esm/index.d.ts",
@@ -20,7 +20,7 @@
   "dependencies": {
     "core-js": "^3.0.0",
     "styled-components": "^5.3.6",
-    "@carlsberggbs/malty.theme.new-malty-theme-provider": "*"
+    "@carlsberggbs/malty.theme.malty-theme-provider": "*"
   },
   "devDependencies": {
     "@babel/runtime": "^7.12.18",
