--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: '20.11.0'
           registry-url: https://npm.pkg.github.com/
           scope: '@carlsberggbs'
 
