--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -17,14 +17,14 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '20.11.0'
 
       - run: echo "registry=https://npm.pkg.github.com/@carlsberggbs" >> .npmrc
 
       - name: Install dependecies
         run: |
           if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
+          yarn install
           elif [ -e package-lock.json ]; then
           npm ci
           else
