chore: fix test workflow
Signed-off-by: Tiago Teixeira <ptteitia@carlsberggroup.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,10 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@carlsberggbs'
 
-      - run: echo "registry=https://npm.pkg.github.com/@carlsberggbs" >> .npmrc
+      - name: Set npm registry and authentication
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - run: |
           if [ -e yarn.lock ]; then
