--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -24,6 +24,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "${{ github.actor }}"
+
       - name: Install dependecies
         run: |
           if [ -e yarn.lock ]; then
