--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "$ptteitia@carlsberggroup.com"
+          git config --global user.name "tfmteixeira"
 
       - name: Install dependecies
         run: |
