--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --global user.email "$ptteitia@carlsberggroup.com"
-          git config --global user.name "tfmteixeira"
+          git config --global user.name "carlsberg-release-app[bot]"
+          git config --global user.email "carlsberg-release-app[bot]@users.noreply.github.com"
 
       - name: Install dependecies
         run: |
