--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -10,12 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - uses: actions/create-github-app-token@v1
         id: app-token
         with:
-          app-id: ${{ secrets.CARLSBERG_RELEASE_APP_ID }}
-          private-key: ${{ secrets.CARLSBERG_RELEASE_APP_PRIVATE_KEY }}
-          
+          app-id: ${{ secrets.CX_RELEASE_APP_ID }}
+          private-key: ${{ secrets.CX_RELEASE_APP_ID }}
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
