--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -17,7 +17,7 @@ jobs:
         id: app-token
         with:
           app-id: ${{ secrets.CX_RELEASE_APP_ID }}
-          private-key: ${{ secrets.CX_RELEASE_APP_ID }}
+          private-key: ${{ secrets.CX_RELEASE_APP_PRIVATE_KEY }}
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
