--- a/.github/workflows/version-packages.yml
+++ b/.github/workflows/version-packages.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           app-id: ${{ secrets.CX_RELEASE_APP_ID }}
           private-key: ${{ secrets.CX_RELEASE_APP_PRIVATE_KEY }}
-          
+
       - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
@@ -31,20 +31,21 @@ jobs:
         run: |
           git config --global user.name "carlsberg-release-app[bot]"
           git config --global user.email "carlsberg-release-app[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
       - name: Set npm registry and authentication
         run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install dependecies
+      - name: Install dependencies
         run: |
           if [ -e yarn.lock ]; then
-          yarn install
+            yarn install
           elif [ -e package-lock.json ]; then
-          npm ci
+            npm ci
           else
-          npm i
+            npm i
           fi
 
       - name: Stash .npmrc changes
