chore: update publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,37 +7,50 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - run: |
-          if [ -e yarn.lock ]; then
-          yarn install --frozen-lockfile
-          elif [ -e package-lock.json ]; then
-          npm ci
-          else
-          npm i
-          fi
-
   publish:
-    needs: build
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/create-github-app-token@v1
+        id: app-token
         with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
-          scope: '@carlsberggbs'
+          app-id: ${{ secrets.CX_RELEASE_APP_ID }}
+          private-key: ${{ secrets.CX_RELEASE_APP_PRIVATE_KEY }}
 
-      - run: echo "registry=https://npm.pkg.github.com/@carlsberggbs" >> .npmrc
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ steps.app-token.outputs.token }}
+          ref: ${{ github.head_ref }}
+          persist-credentials: true
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "carlsberg-release-app[bot]"
+          git config --global user.email "carlsberg-release-app[bot]@users.noreply.github.com"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
+      - name: Set npm registry and authentication
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Install dependencies
+        run: |
+          if [ -e yarn.lock ]; then
+            yarn install
+          elif [ -e package-lock.json ]; then
+            npm ci
+          else
+            npm i
+          fi
+
+      - name: Stash .npmrc changes
+        run: git stash push --keep-index --message "Stashing .npmrc changes"
+        continue-on-error: true
 
       - run: |
           if [ -e yarn.lock ]; then
@@ -47,7 +60,12 @@ jobs:
           else
           npm i
           fi
+
       - run: npx lerna run build
       - run: npx lerna publish from-package --yes
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Unstash .npmrc changes
+        if: failure()
+        run: git stash pop
